5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1859_3213.log
== TEST (2019-06-26 14:35:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: "))
i = 0
while (i < size(m)):
		m[i] = int(input("tempo"))
		i = i + 1
print(max(m))
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:36:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: "))
i = 0

while (i < size(m)):
		a = int(input("tempo"))
		t = array(m[i], a) 
		i = i + 1
print(max(m))
-- ERROR:
File "XXXX", line 4
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:37:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
i = 0

while (i < size(m)):
		m[i] = int(input("tempo"))
		i = i + 1
print(max(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:38:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
i = 0

while (i < size(m)):
		m1 = int(input("tempo"))
		t.append(m[i],m1)
		i = i + 1
print(max(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:38:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
i = 0

while (i < size(m)):
		m1 = int(input("tempo"))
		t.append(m[i])
		i = i + 1
print(max(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:39:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
i = 0

while (i < size(m)):
		m1 = int(input("tempo"))
		t.append(m[i])
		i = i + 1
print(max(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:39:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
i = 0

while (i < size(m)):
		m[i] = int(input("tempo"))
		
		i = i + 1
print(max(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:41:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
i = 0

while (i < size(m)):
		m[i] = int(input("tempo: "))
		
		i = i + 1
print(max(m))
print("O funcionario que possui maior tempo de servico e o:" max(m))
-- ERROR:
File "XXXX", line 11
    print("O funcionario que possui maior tempo de servico e o:" max(m))
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:42:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
i = 0

while (i < size(m)):
		m[i] = int(input("tempo: "))
		
		i = i + 1
print(max(m))
print("O funcionario que possui maior tempo de servico e o:", max(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:42:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
i = 0

while (i < size(m)):
		m[i] = int(input("tempo: "))
		
		i = i + 1
		print(m[i])
print(max(m))
print("O funcionario que possui maior tempo de servico e o:", max(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:44:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
i = 0

while (i < size(m)):
		m[i] = int(input("tempo: "))
		
		i = i + 1
print(m[i])
print(max(m))
print("O funcionario que possui maior tempo de servico e o:", max(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:44:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
i = 0

while (i < size(m)):
		m[i] = int(input("tempo: "))
		
		i = i + 1
print(m)
print(max(m))
print("O funcionario que possui maior tempo de servico e o:", max(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:18:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
for j in (shape(m)[1]):
	s = int(input(""))[i,j]
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:18:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
for j in (shape(m)[1]):
	s = int(input(""))[i,j]
	
print(s)
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:26:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
t = 0
while(i < size(m)):
	a = t.append(m[i], v[i])
	i = i + 1
print(a)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:27:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
t = 0
while(i < size(m)):
	a = t.append(m[i] v[i])
	i = i + 1
print(a)



-- ERROR:
File "XXXX", line 8
    a = t.append(m[i] v[i])
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:27:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
t = 0
while(i < size(m)):
	a = t.append(m[i] v[i])
	i = i + 1
print(a)



-- ERROR:
File "XXXX", line 8
    a = t.append(m[i] v[i])
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:27:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
t = 0
while(i < size(m)):
	a = t.append(m[i])
	i = i + 1
print(a)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:28:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
t = []
while(i < size(m)):
	a = t.append(m[i])
	i = i + 1
print(a)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:28:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
t = []
while(i < size(m)):
	a = t.append(m[i],v[1])
	i = i + 1
print(a)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:29:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
t = []
while(i < size(m)):
	a = t.append(m[i],v[i])
	i = i + 1
print(a)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:30:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
t = []
while(i < size(m)):
	a = t.append(m[i])
	i = i + 1
print(a)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:32:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
t = []
while(i < size(m)):
	


-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:33:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
t = []
while(i < size(m)):
	b = array([v[i], m[i]])
	i = i + 1
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:34:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
t = []
while(i < size(m)):
	b = array([v[i], m[i]])
	i = i + 1
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:34:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
t = []
while(i < size(m)):
	b = array([v[i], m[i]])
	i = i + 1
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:35:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
t = []
while(i < size(m)):
	b = array([m[i], v[i]])
	i = i + 1
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:35:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
t = []
while(i < size(m)):
	b = array([m[i],v[i]])
	i = i + 1
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:36:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
b = 0
while(i < size(m)):
	b = array([m[i],v[i]])
	i = i + 1
	b = b + b
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:38:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
b = 0
while(i < size(m)):
	b = array([m[i],v[i]])
	i = i + 1
	t = array([[b],[b],[b]])
print(b)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:38:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
i = 0
b = 0
while(i < size(m)):
	b = array([m[i],v[i]])
	i = i + 1
	t = array([[b],[b],[b]])
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:41:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
for i in m:
	a = array([[m[i],[v[i]])
print(a)


-- ERROR:
File "XXXX", line 6
    a = array([[m[i],[v[i]])
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:41:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
for i in m:
	a = array([[m[i],[v[i]]
print(a)


-- ERROR:
File "XXXX", line 7
    print(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:41:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
for i in m:
	a = array[[m[i],[v[i]]
print(a)


-- ERROR:
File "XXXX", line 7
    print(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:42:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
for i in m:
	a = array[[m[i],[v[i]]
	print(a)


-- ERROR:
File "XXXX", line 7
    print(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:42:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
for i in m:
	a = array([m[i]],[v[i]])
	print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:43:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("matricula: ")))
v = array(eval(input("tempo: ")))
for i in m:
	a = array([m[i]],[v[i]])
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
